# universal_robot

universal_robot/: package.xml
ur3_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
ur3_moveit_config/launch/: joystick_control.launch  move_group.launch  moveit.rviz  navigation.launch  sensor_manager.launch.xml  simulator.launch  stomp_planning_pipeline.launch.xml  ur3_moveit_sensor_manager.launch.xml
ur3_pg70_mix_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_pg70_mix_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  ur3_pg70.srdf
ur3_pg70_mix_moveit_config/launch/: .directory  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3_pg70_mix_planning_execution.launch  ur3_pg70_moveit_controller_manager.launch.xml  warehouse.launch
ur3_pg70_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_pg70_moveit_config/config/: controllers.yaml  ur3_pg70.srdf
ur3_pg70_moveit_config/launch/: .directory  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3_pg70_moveit_controller_manager.launch.xml  ur3_pg70_moveit_planning_execution.launch  ur3_pg70_planning_execution.launch  warehouse.launch
ur3_pg70_my_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_pg70_my_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ur3_pg70.srdf
ur3_pg70_my_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3_pg70_moveit_controller_manager.launch.xml  ur3_pg70_my_moveit_planning_execution.launch  warehouse.launch
ur3_pg70_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_pg70_table_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  sensors.yaml  ur3_pg70.srdf  ur3_pg70_table.srdf
ur3_pg70_table_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3_pg70_moveit_controller_manager.launch.xml  ur3_pg70_moveit_sensor_manager.launch.xml  ur3_pg70_table_planning_execution.launch  warehouse.launch
ur3_planning/: CMakeLists.txt  package.xml
ur3_planning/launch/: motion_planning.launch
ur3_planning/log/: smoothed_update.txt
ur3_planning/src/: CartesianPath.cpp  NewCartesianPath.cpp  add_object.cpp  add_object_from_tf.cpp  check_collision.cpp  create_floor.cpp  demo.cpp  demo_pick_place.cpp  get_info.cpp  gripper_move.cpp  move_and_grasp.cpp  move_goal.cpp  move_grasp.cpp  move_grasp_messages.cpp  move_grasp_random.cpp  move_grasp_up.cpp  move_position_goal.cpp  move_to_tf.cpp  pick.cpp  pick_and_place.cpp  place.cpp  remove_object.cpp  stomp_move_goal.cpp  stop_move.cpp  test_pipeline.cpp
ur3_planning/src/move_trajectory/: close_gripper.py  demo_mul.py  gripper.py  open_gripper.py  test_move.py  untitled.py
ur3_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_table_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  ur3_table.srdf
ur3_table_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3_table_moveit_controller_manager.launch.xml  ur3_table_moveit_planning_execution.launch  warehouse.launch
ur_description/launch/: ur3_pg70.launch  ur3_pg70_table.launch
ur_description/urdf/: ur3_pg70.urdf.xacro  ur3_pg70_new.urdf.xacro  ur3_pg70_old.urdf.xacro  ur3_pg70_table.urdf.xacro  ur3_table.urdf.xacro
ur_driver/: CMakeLists.txt
ur_driver/src/ur_driver/: driver.py
ur_gazebo/controller/: ur3_pg70_controller.yaml
ur_gazebo/launch/: test_controller.launch  ur3.launch  ur3_pg70.launch  ur3_pg70_my.launch  ur3_pg70_table.launch  ur3_table.launch
ur_msgs/: CMakeLists.txt  package.xml
